Add new endpoint for fetching first image per taxon
