# media/urls.py
@@ -5,6 +5,7 @@ from media.views import (
     ImageLabelingCollectionView,
     MediaCollectionView,
     TagCollectionView,
+    image_labeling_first_per_taxon,
     image_labeling_summary,
 )
 
@@ -34,5 +35,10 @@ urlpatterns = [
         "media/image_labeling/summary/",
         image_labeling_summary,
         name="image-labeling-summary",
+    ),
+    path(
+    "media/image_labeling/first_per_taxon/",
+    image_labeling_first_per_taxon,
+    name="image-labeling-first-per-taxon",
     ),
 ]
